--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,15 +10,17 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Imports: 
+    doSNOW(>= 1.0.15),
     dplyr(>= 0.7.4),
+    foreach(>= 1.4.3),
     ggplot2(>= 2.2.1),
     ggthemes(>= 3.4.0),
+    gridExtra(>= 2.3),
     gtable(>= 0.2.0),
     ggpubr(>= 0.1.6),
-    gridExtra(>= 2.3),
-    vars(>= 0.7.4),
-    foreach(>= 1.4.3),
-    doSNOW(>= 1.0.15),
     mFilter(>=  0.1-3),
-    sandwich(>= 2.4-0)
+    sandwich(>= 2.4-0),
+    vars(>= 0.7.4)
+   
+    
 RoxygenNote: 6.0.1
