--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,8 @@ Imports:
     gtable(>= 0.2.0),
     ggpubr(>= 0.1.6),
     mFilter(>=  0.1-3),
+    Rcpp,
     sandwich(>= 2.4-0),
     vars(>= 0.7.4)
 RoxygenNote: 6.0.1
+LinkingTo: Rcpp, RcppArmadillo
