--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(lp_lin)
 export(lp_nl)
 export(plot_lin_irfs)
+export(plot_nl_irfs)
 exportPattern("^[[:alpha:]]+")
 import(foreach)
 importFrom(Rcpp,evalCpp)
