Functions description update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(lp_lin)
 export(lp_nl)
 export(plot_lin_irfs)
 export(plot_nl_irfs)
+export(switching_series)
 exportPattern("^[[:alpha:]]+")
 import(foreach)
 importFrom(Rcpp,evalCpp)
