--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(plot_nl_irfs)
 export(switching_series)
 exportPattern("^[[:alpha:]]+")
 import(foreach)
+import(ggplot2)
 importFrom(Rcpp,evalCpp)
 useDynLib(lpirfs, .registration = TRUE)
