--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Imports:
     ggpubr(>= 0.1.6),
     mFilter(>=  0.1-3),
     Rcpp,
+    rmarkdown(1.9), 
     vars(>= 0.7.4)
 RoxygenNote: 6.0.1
 LinkingTo: Rcpp, RcppArmadillo
