--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,9 @@ Imports:
     gridExtra(>= 2.3),
     gtable(>= 0.2.0),
     ggpubr(>= 0.1.6),
-    mFilter(>=  0.1-3),
+    mFilter(>= 0.1-3),
     Rcpp,
-    rmarkdown(1.9), 
+    rmarkdown(>= 1.9), 
     vars(>= 0.7.4)
 RoxygenNote: 6.0.1
 LinkingTo: Rcpp, RcppArmadillo
