--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Philipp Adämmer
 Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
 Description: The package estimates linear and non-linear impulse response functions based on the local projection method by Jordà (2005).
-              The non-linear irfs are based on a transition function as used in Auerbach & Gorodnichenko (2012).
+              The non-linear impulse responses are based on a transition function as used in Auerbach and Gorodnichenko (2012).
 License: MIT
 Encoding: UTF-8
 LazyData: true
