--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(lp_nl)
 export(plot_lin_irfs)
 export(plot_nl_irfs)
 exportPattern("^[[:alpha:]]+")
+import(dplyr)
 import(foreach)
 import(ggplot2)
 importFrom(Rcpp,evalCpp)
