--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,12 @@ Title: Estimate Impulse Response Functions based on Local Projections by Jordà 
 Version: 0.1.0
 Author: Philipp Adämmer
 Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
-Description: The package estimates linear and non-linear impulse response functions based on the local projection method by Jordà (2005).
-              The non-linear impulse responses are based on a transition function as used in Auerbach and Gorodnichenko (2012).
-License: MIT
+BugReports: https://github.com/AdaemmerP/lpirfs/issues
+Description: The package contains functions to estimate linear and non-linear impulse 
+             responses based on the local projection method by Jordà (2005) <doi:10.1257/0002828053828518>
+             Non-linear impulse responses are estimated for two regimes which are estimated with 
+             a transition function, proposed by Auerbach and Gorodnichenko (2012) <doi:10.1257/pol.4.2.1>.
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 Imports: 
