--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     gtable(>= 0.2.0),
     ggpubr(>= 0.1.6),
     mFilter(>= 0.1-3),
-    Rcpp,
+    Rcpp(>= 0.12.17),
+    rlang(>= 0.2.0), 
     rmarkdown(>= 1.9), 
     vars(>= 0.7.4)
 RoxygenNote: 6.0.1
