--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Estimate Impulse Response Functions Based on Local Projections by Jordà (2005)
 Version: 0.1.0
 Author: Philipp Adämmer
-Maintainer: Philipp Adaemmer <adaemmer@hsu-hh.de>
+Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
 BugReports: https://github.com/AdaemmerP/lpirfs/issues
 Description: Contains functions to estimate linear and non-linear impulse 
              responses based on the local projection method by Jordà (2005) <doi:10.1257/0002828053828518>
