--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,20 @@
 Package: lpirfs
 Type: Package
 Title: Estimate Impulse Response Functions Based on Local Projections by Jordà (2005)
-Version: 0.1.0
-Author: Philipp Adämmer
-Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
-BugReports: https://github.com/AdaemmerP/lpirfs/issues
+Version: 1.0.0
+Author: Philipp Adaemmer [aut, cre]
+Authors@R: c(
+            person("Philipp", "Adaemmer", 
+            email = "adaemmer@hsu-hh.de", 
+            role = c("aut", "cre")))
+Maintainer: Philipp Adaemmer <adaemmer@hsu-hh.de>
+BugReports: https://github.com/adaemmerp/lpirfs/issues
 Description: Contains functions to estimate linear and non-linear impulse 
-             responses based on the local projection method by Jordà (2005) <doi:10.1257/0002828053828518>
+             responses based on local projections by Jordà (2005) <doi:10.1257/0002828053828518>
              Non-linear impulse responses are estimated for two regimes which are estimated with 
              a transition function, proposed by Auerbach and Gorodnichenko (2012) <doi:10.1257/pol.4.2.1>.
 License: GPL (>= 2)
+Depends: R (>= 3.1.2)
 Encoding: UTF-8
 LazyData: true
 Imports: 
@@ -18,9 +23,7 @@ Imports:
     foreach(>= 1.4.3),
     ggplot2(>= 2.2.1),
     ggthemes(>= 3.4.0),
-    gridExtra(>= 2.3),
     gtable(>= 0.2.0),
-    ggpubr(>= 0.1.6),
     mFilter(>= 0.1-3),
     Rcpp(>= 0.12.17),
     rlang(>= 0.2.0), 
