--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: lpirfs
 Type: Package
 Title: Estimate Impulse Response Functions Based on Local Projections by Jordà (2005)
 Version: 0.1.0
-Author: Philipp Adaemmer [aut, cre]
+Author: Philipp Adämmer [aut, cre]
 Authors@R: c(
-            person("Philipp", "Adaemmer", 
+            person("Philipp", "Adämmer", 
             email = "adaemmer@hsu-hh.de", 
             role = c("aut", "cre")))
-Maintainer: Philipp Adaemmer <adaemmer@hsu-hh.de>
+Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
 BugReports: https://github.com/adaemmerp/lpirfs/issues
 Description: Contains functions to estimate linear and non-linear impulse 
              responses based on local projections by Jordà (2005) <doi:10.1257/0002828053828518>
@@ -17,6 +17,7 @@ License: GPL (>= 2)
 Depends: R (>= 3.1.2)
 Encoding: UTF-8
 LazyData: true
+NeedsCompilation:	yes
 Imports: 
     doParallel(>= 1.0.11),
     dplyr(>= 0.7.4),
