--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
 Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
 BugReports: https://github.com/adaemmerp/lpirfs/issues
 Description: Contains functions to estimate linear and nonlinear impulse 
-             responses based on local projections by Jordà (2005) <doi:10.1257/0002828053828518>
+             responses based on local projections by Jordà (2005) <doi:10.1257/0002828053828518>.
              Nonlinear impulse responses are estimated for two regimes based on 
              a transition function used in Auerbach and Gorodnichenko (2012) <doi:10.1257/pol.4.2.1>.
 License: GPL (>= 2)
@@ -23,12 +23,8 @@ Imports:
     dplyr(>= 0.7.4),
     foreach(>= 1.4.3),
     ggplot2(>= 2.2.1),
-    ggthemes(>= 3.4.0),
-    gtable(>= 0.2.0),
     mFilter(>= 0.1-3),
     Rcpp(>= 0.12.17),
-    rlang(>= 0.2.0), 
-    rmarkdown(>= 1.9), 
     vars(>= 0.7.4)
 RoxygenNote: 6.0.1
 LinkingTo: Rcpp, RcppArmadillo
