--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: lpirfs
 Type: Package
-Title: Estimate Impulse Response Functions Based on Local Projections by Jordà (2005)
+Title: Local Projections Impulse Response Functions
 Version: 0.1.0.9000
-Author: Philipp Adämmer [aut, cre]
 Authors@R: c(
             person("Philipp", "Adämmer", 
-            email = "adaemmer@hsu-hh.de", 
-            role = c("aut", "cre")))
+                    email   = "adaemmer@hsu-hh.de", 
+                    role    = c("aut", "cre"),
+                    comment = c(ORCID = 0000-0003-3770-0097)))
 Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
 BugReports: https://github.com/adaemmerp/lpirfs/issues
 Description: Contains functions to estimate linear and nonlinear impulse 
