--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,7 @@ Authors@R: c(
             person("Philipp", "Adämmer", 
                     email   = "adaemmer@hsu-hh.de", 
                     role    = c("aut", "cre"),
-                    comment = c(ORCID = 0000-0003-3770-0097)))
-Author: Philipp Adämmer [aut, cre]
+                    comment = c(ORCID = "0000-0003-3770-0097"))) 
 Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
 BugReports: https://github.com/adaemmerp/lpirfs/issues
 Description: Contains functions to estimate linear and nonlinear impulse 
