--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lpirfs
 Type: Package
 Title: Local Projections Impulse Response Functions
-Version: 0.1.0.9000
+Version: 0.1.1
 Authors@R: c(
             person("Philipp", "Adämmer", 
                     email   = "adaemmer@hsu-hh.de", 
@@ -9,6 +9,9 @@ Authors@R: c(
                     comment = c(ORCID = "0000-0003-3770-0097")),
             person("James P.", "LeSage", 
                     email   = "jlesage@spatial-econometrics.com", 
+                    role    = c("ctb")),
+            person("Mehmet.", "Balcilar", 
+                    email   = "mbalcilar@yahoo.com", 
                     role    = c("ctb"))) 
 Maintainer: Philipp Adämmer <adaemmer@hsu-hh.de>
 BugReports: https://github.com/adaemmerp/lpirfs/issues
@@ -26,7 +29,6 @@ Imports:
     dplyr(>= 0.7.4),
     foreach(>= 1.4.3),
     ggplot2(>= 2.2.1),
-    mFilter(>= 0.1-3),
     Rcpp(>= 0.12.17),
     vars(>= 0.7.4)
 RoxygenNote: 6.0.1
