- New function to estimate lp for panel data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(lp_lin)
 export(lp_lin_iv)
 export(lp_nl)
 export(lp_nl_iv)
+export(lp_panel_lin)
 export(plot_lin)
 export(plot_nl)
 exportPattern("^[[:alpha:]]+")
