--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Imports:
     dplyr(>= 0.7.4),
     foreach(>= 1.4.3),
     ggplot2(>= 2.2.1),
+    plm(>= 1.6-6),
     Rcpp(>= 0.12.17)
 RoxygenNote: 6.1.0
 LinkingTo: Rcpp, RcppArmadillo
