- Fixed Namespace issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,9 @@ import(dplyr)
 import(foreach)
 import(ggplot2)
 importFrom(Rcpp,evalCpp)
+importFrom(dplyr,filter)
+importFrom(dplyr,lag)
+importFrom(dplyr,lead)
+importFrom(lmtest,coeftest)
+importFrom(plm,plm)
 useDynLib(lpirfs, .registration = TRUE)
