- Update documentation - Update NEWS - Update README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(dplyr,filter)
 importFrom(dplyr,lag)
 importFrom(dplyr,lead)
+importFrom(foreach,foreach)
 importFrom(lmtest,coeftest)
 importFrom(plm,plm)
 useDynLib(lpirfs, .registration = TRUE)
