--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(lp_nl_iv)
 export(lp_nl_panel)
 export(plot_lin)
 export(plot_nl)
+export(se_hc_panel_cluster)
 exportPattern("^[[:alpha:]]+")
 import(dplyr)
 import(foreach)
@@ -19,4 +20,5 @@ importFrom(dplyr,lead)
 importFrom(foreach,foreach)
 importFrom(lmtest,coeftest)
 importFrom(plm,plm)
+importFrom(sandwich,vcovHC)
 useDynLib(lpirfs, .registration = TRUE)
