Added new linear function for smooth local projection approach

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,14 @@ export(lp_nl_panel)
 export(plot_lin)
 export(plot_nl)
 export(se_hc_panel_cluster)
+export(slp_lin)
 exportPattern("^[[:alpha:]]+")
 import(dplyr)
 import(foreach)
 import(ggplot2)
+importFrom(Matrix,Matrix)
+importFrom(Matrix,solve)
+importFrom(Matrix,t)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,filter)
 importFrom(dplyr,lag)
@@ -21,4 +25,6 @@ importFrom(foreach,foreach)
 importFrom(lmtest,coeftest)
 importFrom(plm,plm)
 importFrom(sandwich,vcovHC)
+importFrom(splines,spline.des)
+importFrom(utils,tail)
 useDynLib(lpirfs, .registration = TRUE)
