New checks for lp_lin_panel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,5 +26,6 @@ importFrom(lmtest,coeftest)
 importFrom(plm,plm)
 importFrom(sandwich,vcovHC)
 importFrom(splines,spline.des)
+importFrom(stats,variable.names)
 importFrom(utils,tail)
 useDynLib(lpirfs, .registration = TRUE)
