--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(Matrix,solve)
 importFrom(Matrix,t)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,filter)
+importFrom(dplyr,if_else)
 importFrom(dplyr,lag)
 importFrom(dplyr,lead)
 importFrom(foreach,foreach)
