Import arrange from dplyr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ import(dplyr)
 import(foreach)
 import(ggplot2)
 importFrom(Rcpp,evalCpp)
+importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
 importFrom(dplyr,lag)
 importFrom(dplyr,lead)
