Update function names for robust covariance estimation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(summary,lpirfs_lin_panel_obj)
 S3method(summary,lpirfs_nl_iv_obj)
 S3method(summary,lpirfs_nl_obj)
 S3method(summary,lpirfs_nl_panel_obj)
+export(get_robust_cov_panel)
+export(get_robust_vcxt_panel)
 export(lp_lin)
 export(lp_lin_iv)
 export(lp_lin_panel)
@@ -20,7 +22,6 @@ export(lp_nl_iv)
 export(lp_nl_panel)
 export(plot_lin)
 export(plot_nl)
-export(se_hc_panel_cluster)
 exportPattern("^[[:alpha:]]+")
 import(dplyr)
 import(foreach)
@@ -36,6 +37,12 @@ importFrom(graphics,plot)
 importFrom(gridExtra,marrangeGrob)
 importFrom(lmtest,coeftest)
 importFrom(plm,plm)
+importFrom(plm,vcovBK)
+importFrom(plm,vcovDC)
+importFrom(plm,vcovG)
+importFrom(plm,vcovHC)
+importFrom(plm,vcovNW)
+importFrom(plm,vcovSCC)
 importFrom(sandwich,vcovHC)
 importFrom(stats,variable.names)
 useDynLib(lpirfs, .registration = TRUE)
