--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Imports:
     dplyr(>= 0.8.0),
     foreach(>= 1.4.3),
     ggplot2(>= 2.2.1),
+    ggpubr(>= 0.2.3),
     gridExtra(>= 2.3),
     lmtest (>= 0.9-36), 
     plm(>= 1.6-6),
@@ -40,7 +41,6 @@ LinkingTo: Rcpp, RcppArmadillo
 Suggests: 
     testthat,
     httr,
-    ggpubr,
     readxl,
     knitr,
     rmarkdown,
