--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ exportPattern("^[[:alpha:]]+")
 import(dplyr)
 import(foreach)
 import(ggplot2)
+import(ggpubr)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
