--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,5 +45,7 @@ importFrom(plm,vcovHC)
 importFrom(plm,vcovNW)
 importFrom(plm,vcovSCC)
 importFrom(sandwich,vcovHC)
+importFrom(stats,na.omit)
+importFrom(stats,pf)
 importFrom(stats,variable.names)
 useDynLib(lpirfs, .registration = TRUE)
