--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lpirfs
 Type: Package
 Title: Local Projections Impulse Response Functions
-Version: 0.2.3.9000
+Version: 0.2.4.9000
 Authors@R: c(
             person("Philipp", "Adämmer", 
                     email   = "philipp.adaemmer@uni-greifswald.de", 
@@ -35,12 +35,12 @@ Imports:
     lmtest(>= 0.9-36), 
     plm(>= 2.2-3),
     sandwich(>= 2.5-1),
-    Rcpp(>= 1.0.4.6),
-    AER(>= 1.2-12)
+    Rcpp(>= 1.0.4.6)
 RoxygenNote: 7.3.1
 LinkingTo: Rcpp, RcppArmadillo
 Suggests: 
     testthat (>= 3.0.0),
+    AER(>= 1.2-12),
     readxl,
     knitr,
     ggpubr,
